# schlussel

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Package.swift  README.md  RELEASE.md  build.zig  cliff.toml
.github/workflows/: ci.yml  release.yml  xcframework.yml
Sources/Schlussel/: Schlussel.swift
Tests/SchlusselTests/: SchlusselTests.swift
bindings/node/: README.md  example.js  index.js  lib.js  package.json
docs/: README.md  oauth-flows.md  provider-presets.md  quick-start.md  storage-backends.md  swift-integration.md
examples/: cross_process_refresh.rs  github_callback.rs  github_device_flow.rs  secure_storage.rs  token_refresh.rs
include/: schlussel.h
mise/tasks/: build  build-xcframework  build.sh  dev  test
scripts/: build-artifactbundle.sh  build-xcframework.sh
src/: c_api.zig  callback.rs  error.rs  example.zig  ffi.rs  lib.rs  lib.zig  lock.rs  oauth.rs  oauth.zig  pkce.rs  pkce.zig  session.rs  session.zig
swift/: Schlussel.swift
test/: integration_test.zig
