[package]
name = "schlussel"
version = "0.5.0"
edition = "2021"
authors = ["Tuist"]
license = "MIT"
description = "Cross-platform OAuth 2.0 with PKCE for CLI applications"
repository = "https://github.com/tuist/schlussel"
keywords = ["oauth", "oauth2", "pkce", "cli", "authentication"]
categories = ["authentication", "api-bindings"]
include = [
    "src/**/*",
    "include/schlussel.h",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]
# Explicitly exclude large XCFramework files that are created during release
exclude = [
    "*.xcframework.zip",
    "*.xcframework",
    "Schlussel.xcframework.zip",
]

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
thiserror = "2.0"
webbrowser = "1.0"
fs2 = "0.4"
keyring = "3.6"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
